hw3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> expression SEMICOLON
Rule 2     expression -> expression EXPONENT expression
Rule 3     term -> expression TIMES expression
Rule 4     term -> expression DIVIDE expression
Rule 5     expression -> expression INTDIV expression
Rule 6     expression -> expression MOD expression
Rule 7     expression -> expression PLUS expression
Rule 8     expression -> expression MINUS expression
Rule 9     expression -> expression IN expression
Rule 10    expression -> expression CONCAT expression
Rule 11    expression -> NOT expression
Rule 12    expression -> expression ANDALSO expression
Rule 13    expression -> expression ORELSE expression
Rule 14    expression -> expression LT expression
Rule 15    expression -> expression LE expression
Rule 16    expression -> expression EQUAL expression
Rule 17    expression -> expression NOTEQUAL expression
Rule 18    expression -> expression GE expression
Rule 19    expression -> expression GT expression
Rule 20    factor -> LPAREN expression RPAREN
Rule 21    expression -> LBRACKET list_inside RBRACKET
Rule 22    list_inside -> expression COMMA list_inside
Rule 23    list_inside -> expression
Rule 24    list_inside -> <empty>
Rule 25    expression -> expression LBRACKET expression RBRACKET
Rule 26    expression -> LPAREN tupleinside RPAREN
Rule 27    tupleinside -> expression COMMA tupleinside
Rule 28    tupleinside -> expression
Rule 29    tupleinside -> <empty>
Rule 30    expression -> TUPLE_INDEX expression LPAREN expression RPAREN
Rule 31    expression -> term
Rule 32    term -> factor
Rule 33    factor -> NUMBER
Rule 34    factor -> BOOLEAN
Rule 35    term -> STRING

Terminals, with rules where they appear

ANDALSO              : 12
BOOLEAN              : 34
COMMA                : 22 27
CONCAT               : 10
DIVIDE               : 4
EQUAL                : 16
EXPONENT             : 2
GE                   : 18
GT                   : 19
IN                   : 9
INTDIV               : 5
LBRACKET             : 21 25
LE                   : 15
LPAREN               : 20 26 30
LT                   : 14
MINUS                : 8
MOD                  : 6
NOT                  : 11
NOTEQUAL             : 17
NUMBER               : 33
ORELSE               : 13
PLUS                 : 7
RBRACKET             : 21 25
RPAREN               : 20 26 30
SEMICOLON            : 1
STRING               : 35
TIMES                : 3
TUPLE_INDEX          : 30
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 2 3 3 4 4 5 5 6 6 7 7 8 8 9 9 10 10 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 22 23 25 25 27 28 30 30
factor               : 32
list_inside          : 21 22
statement            : 0
term                 : 31
tupleinside          : 26 27

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . expression SEMICOLON
    (2) expression -> . expression EXPONENT expression
    (5) expression -> . expression INTDIV expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONCAT expression
    (11) expression -> . NOT expression
    (12) expression -> . expression ANDALSO expression
    (13) expression -> . expression ORELSE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression GE expression
    (19) expression -> . expression GT expression
    (21) expression -> . LBRACKET list_inside RBRACKET
    (25) expression -> . expression LBRACKET expression RBRACKET
    (26) expression -> . LPAREN tupleinside RPAREN
    (30) expression -> . TUPLE_INDEX expression LPAREN expression RPAREN
    (31) expression -> . term
    (3) term -> . expression TIMES expression
    (4) term -> . expression DIVIDE expression
    (32) term -> . factor
    (35) term -> . STRING
    (20) factor -> . LPAREN expression RPAREN
    (33) factor -> . NUMBER
    (34) factor -> . BOOLEAN

    NOT             shift and go to state 3
    LBRACKET        shift and go to state 4
    LPAREN          shift and go to state 5
    TUPLE_INDEX     shift and go to state 6
    STRING          shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11

    statement                      shift and go to state 1
    expression                     shift and go to state 2
    term                           shift and go to state 7
    factor                         shift and go to state 8

state 1

    (0) S' -> statement .



state 2

    (1) statement -> expression . SEMICOLON
    (2) expression -> expression . EXPONENT expression
    (5) expression -> expression . INTDIV expression
    (6) expression -> expression . MOD expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . IN expression
    (10) expression -> expression . CONCAT expression
    (12) expression -> expression . ANDALSO expression
    (13) expression -> expression . ORELSE expression
    (14) expression -> expression . LT expression
    (15) expression -> expression . LE expression
    (16) expression -> expression . EQUAL expression
    (17) expression -> expression . NOTEQUAL expression
    (18) expression -> expression . GE expression
    (19) expression -> expression . GT expression
    (25) expression -> expression . LBRACKET expression RBRACKET
    (3) term -> expression . TIMES expression
    (4) term -> expression . DIVIDE expression

    SEMICOLON       shift and go to state 12
    EXPONENT        shift and go to state 13
    INTDIV          shift and go to state 14
    MOD             shift and go to state 15
    PLUS            shift and go to state 16
    MINUS           shift and go to state 17
    IN              shift and go to state 18
    CONCAT          shift and go to state 19
    ANDALSO         shift and go to state 20
    ORELSE          shift and go to state 21
    LT              shift and go to state 22
    LE              shift and go to state 23
    EQUAL           shift and go to state 24
    NOTEQUAL        shift and go to state 25
    GE              shift and go to state 26
    GT              shift and go to state 27
    LBRACKET        shift and go to state 28
    TIMES           shift and go to state 29
    DIVIDE          shift and go to state 30


state 3

    (11) expression -> NOT . expression
    (2) expression -> . expression EXPONENT expression
    (5) expression -> . expression INTDIV expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONCAT expression
    (11) expression -> . NOT expression
    (12) expression -> . expression ANDALSO expression
    (13) expression -> . expression ORELSE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression GE expression
    (19) expression -> . expression GT expression
    (21) expression -> . LBRACKET list_inside RBRACKET
    (25) expression -> . expression LBRACKET expression RBRACKET
    (26) expression -> . LPAREN tupleinside RPAREN
    (30) expression -> . TUPLE_INDEX expression LPAREN expression RPAREN
    (31) expression -> . term
    (3) term -> . expression TIMES expression
    (4) term -> . expression DIVIDE expression
    (32) term -> . factor
    (35) term -> . STRING
    (20) factor -> . LPAREN expression RPAREN
    (33) factor -> . NUMBER
    (34) factor -> . BOOLEAN

    NOT             shift and go to state 3
    LBRACKET        shift and go to state 4
    LPAREN          shift and go to state 5
    TUPLE_INDEX     shift and go to state 6
    STRING          shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11

    expression                     shift and go to state 31
    term                           shift and go to state 7
    factor                         shift and go to state 8

state 4

    (21) expression -> LBRACKET . list_inside RBRACKET
    (22) list_inside -> . expression COMMA list_inside
    (23) list_inside -> . expression
    (24) list_inside -> .
    (2) expression -> . expression EXPONENT expression
    (5) expression -> . expression INTDIV expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONCAT expression
    (11) expression -> . NOT expression
    (12) expression -> . expression ANDALSO expression
    (13) expression -> . expression ORELSE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression GE expression
    (19) expression -> . expression GT expression
    (21) expression -> . LBRACKET list_inside RBRACKET
    (25) expression -> . expression LBRACKET expression RBRACKET
    (26) expression -> . LPAREN tupleinside RPAREN
    (30) expression -> . TUPLE_INDEX expression LPAREN expression RPAREN
    (31) expression -> . term
    (3) term -> . expression TIMES expression
    (4) term -> . expression DIVIDE expression
    (32) term -> . factor
    (35) term -> . STRING
    (20) factor -> . LPAREN expression RPAREN
    (33) factor -> . NUMBER
    (34) factor -> . BOOLEAN

    RBRACKET        reduce using rule 24 (list_inside -> .)
    NOT             shift and go to state 3
    LBRACKET        shift and go to state 4
    LPAREN          shift and go to state 5
    TUPLE_INDEX     shift and go to state 6
    STRING          shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11

    list_inside                    shift and go to state 32
    expression                     shift and go to state 33
    term                           shift and go to state 7
    factor                         shift and go to state 8

state 5

    (26) expression -> LPAREN . tupleinside RPAREN
    (20) factor -> LPAREN . expression RPAREN
    (27) tupleinside -> . expression COMMA tupleinside
    (28) tupleinside -> . expression
    (29) tupleinside -> .
    (2) expression -> . expression EXPONENT expression
    (5) expression -> . expression INTDIV expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONCAT expression
    (11) expression -> . NOT expression
    (12) expression -> . expression ANDALSO expression
    (13) expression -> . expression ORELSE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression GE expression
    (19) expression -> . expression GT expression
    (21) expression -> . LBRACKET list_inside RBRACKET
    (25) expression -> . expression LBRACKET expression RBRACKET
    (26) expression -> . LPAREN tupleinside RPAREN
    (30) expression -> . TUPLE_INDEX expression LPAREN expression RPAREN
    (31) expression -> . term
    (3) term -> . expression TIMES expression
    (4) term -> . expression DIVIDE expression
    (32) term -> . factor
    (35) term -> . STRING
    (20) factor -> . LPAREN expression RPAREN
    (33) factor -> . NUMBER
    (34) factor -> . BOOLEAN

    RPAREN          reduce using rule 29 (tupleinside -> .)
    NOT             shift and go to state 3
    LBRACKET        shift and go to state 4
    LPAREN          shift and go to state 5
    TUPLE_INDEX     shift and go to state 6
    STRING          shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11

    tupleinside                    shift and go to state 34
    expression                     shift and go to state 35
    term                           shift and go to state 7
    factor                         shift and go to state 8

state 6

    (30) expression -> TUPLE_INDEX . expression LPAREN expression RPAREN
    (2) expression -> . expression EXPONENT expression
    (5) expression -> . expression INTDIV expression
    (6) expression -> . expression MOD expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression IN expression
    (10) expression -> . expression CONCAT expression
    (11) expression -> . NOT expression
    (12) expression -> . expression ANDALSO expression
    (13) expression -> . expression ORELSE expression
    (14) expression -> . expression LT expression
    (15) expression -> . expression LE expression
    (16) expression -> . expression EQUAL expression
    (17) expression -> . expression NOTEQUAL expression
    (18) expression -> . expression GE expression
    (19) expression -> . expression GT expression
    (21) expression -> . LBRACKET list_inside RBRACKET
    (25) expression -> . expression LBRACKET expression RBRACKET
    (26) expression -> . LPAREN tupleinside RPAREN
    (30) expression -> . TUPLE_INDEX expression LPAREN expression RPAREN
    (31) expression -> . term
    (3) term -> . expression TIMES expression
    (4) term -> . expression DIVIDE expression
    (32) term -> . factor
    (35) term -> . STRING
    (20) factor -> . LPAREN expression RPAREN
    (33) factor -> . NUMBER
    (34) factor -> . BOOLEAN

    NOT             shift and go to state 3
    LBRACKET        shift and go to state 4
    LPAREN          shift and go to state 5
    TUPLE_INDEX     shift and go to state 6
    STRING          shift and go to state 9
    NUMBER          shift and go to state 10
    BOOLEAN         shift and go to state 11

    expression                     shift and go to state 36
    term                           shift and go to state 7
    factor                         shift and go to state 8

state 7

    (31) expression -> term .

    SEMICOLON       reduce using rule 31 (expression -> term .)
    EXPONENT        reduce using rule 31 (expression -> term .)
    INTDIV          reduce using rule 31 (expression -> term .)
    MOD             reduce using rule 31 (expression -> term .)
    PLUS            reduce using rule 31 (expression -> term .)
    MINUS           reduce using rule 31 (expression -> term .)
    IN              reduce using rule 31 (expression -> term .)
    CONCAT          reduce using rule 31 (expression -> term .)
    ANDALSO         reduce using rule 31 (expression -> term .)
    ORELSE          reduce using rule 31 (expression -> term .)
    LT              reduce using rule 31 (expression -> term .)
    LE              reduce using rule 31 (expression -> term .)
    EQUAL           reduce using rule 31 (expression -> term .)
    NOTEQUAL        reduce using rule 31 (expression -> term .)
    GE              reduce using rule 31 (expression -> term .)
    GT              reduce using rule 31 (expression -> term .)
    LBRACKET        reduce using rule 31 (expression -> term .)
    TIMES           reduce using rule 31 (expression -> term .)
    DIVIDE          reduce using rule 31 (expression -> term .)
    COMMA           reduce using rule 31 (expression -> term .)
    RBRACKET        reduce using rule 31 (expression -> term .)
    RPAREN          reduce using rule 31 (expression -> term .)
    LPAREN          reduce using rule 31 (expression -> term .)


state 8

    (32) term -> factor .

    SEMICOLON       reduce using rule 32 (term -> factor .)
    EXPONENT        reduce using rule 32 (term -> factor .)
    INTDIV          reduce using rule 32 (term -> factor .)
    MOD             reduce using rule 32 (term -> factor .)
    PLUS            reduce using rule 32 (term -> factor .)
    MINUS           reduce using rule 32 (term -> factor .)
    IN              reduce using rule 32 (term -> factor .)
    CONCAT          reduce using rule 32 (term -> factor .)
    ANDALSO         reduce using rule 32 (term -> factor .)
    ORELSE          reduce using rule 32 (term -> factor .)
    LT              reduce using rule 32 (term -> factor .)
    LE              reduce using rule 32 (term -> factor .)
    EQUAL           reduce using rule 32 (term -> factor .)
    NOTEQUAL        reduce using rule 32 (term -> factor .)
    GE              reduce using rule 32 (term -> factor .)
    GT              reduce using rule 32 (term -> factor .)
    LBRACKET        reduce using rule 32 (term -> factor .)
    TIMES           reduce using rule 32 (term -> factor .)
    DIVIDE          reduce using rule 32 (term -> factor .)
    COMMA           reduce using rule 32 (term -> factor .)
    RBRACKET        reduce using rule 32 (term -> factor .)
    RPAREN          reduce using rule 32 (term -> factor .)
    LPAREN          reduce using rule 32 (term -> factor .)


state 9

    (35) term -> STRING .

    SEMICOLON       reduce using rule 35 (term -> STRING .)
    EXPONENT        reduce using rule 35 (term -> STRING .)
    INTDIV          reduce using rule 35 (term -> STRING .)
    MOD             reduce using rule 35 (term -> STRING .)
    PLUS            reduce using rule 35 (term -> STRING .)
    MINUS           reduce using rule 35 (term -> STRING .)
    IN              reduce using rule 35 (term -> STRING .)
    CONCAT          reduce using rule 35 (term -> STRING .)
    ANDALSO         reduce using rule 35 (term -> STRING .)
    ORELSE          reduce using rule 35 (term -> STRING .)
    LT              reduce using rule 35 (term -> STRING .)
    LE              reduce using rule 35 (term -> STRING .)
    EQUAL           reduce using rule 35 (term -> STRING .)
    NOTEQUAL        reduce using rule 35 (term -> STRING .)
    GE              reduce using rule 35 (term -> STRING .)
    GT              reduce using rule 35 (term -> STRING .)
    LBRACKET        reduce using rule 35 (term -> STRING .)
    TIMES           reduce using rule 35 (term -> STRING .)
    DIVIDE          reduce using rule 35 (term -> STRING .)
    COMMA           reduce using rule 35 (term -> STRING .)
    RBRACKET        reduce using rule 35 (term -> STRING .)
    RPAREN          reduce using rule 35 (term -> STRING .)
    LPAREN          reduce using rule 35 (term -> STRING .)


state 10

    (33) factor -> NUMBER .

    SEMICOLON       reduce using rule 33 (factor -> NUMBER .)
    EXPONENT        reduce using rule 33 (factor -> NUMBER .)
    INTDIV          reduce using rule 33 (factor -> NUMBER .)
    MOD             reduce using rule 33 (factor -> NUMBER .)
    PLUS            reduce using rule 33 (factor -> NUMBER .)
    MINUS           reduce using rule 33 (factor -> NUMBER .)
    IN              reduce using rule 33 (factor -> NUMBER .)
    CONCAT          reduce using rule 33 (factor -> NUMBER .)
    ANDALSO         reduce using rule 33 (factor -> NUMBER .)
    ORELSE          reduce using rule 33 (factor -> NUMBER .)
    LT              reduce using rule 33 (factor -> NUMBER .)
    LE              reduce using rule 33 (factor -> NUMBER .)
    EQUAL           reduce using rule 33 (factor -> NUMBER .)
    NOTEQUAL        reduce using rule 33 (factor -> NUMBER .)
    GE              reduce using rule 33 (factor -> NUMBER .)
    GT              reduce using rule 33 (factor -> NUMBER .)
    LBRACKET        reduce using rule 33 (factor -> NUMBER .)
    TIMES           reduce using rule 33 (factor -> NUMBER .)
    DIVIDE          reduce using rule 33 (factor -> NUMBER .)
    COMMA           reduce using rule 33 (factor -> NUMBER .)
    RBRACKET        reduce using rule 33 (factor -> NUMBER .)
    RPAREN          reduce using rule 33 (factor -> NUMBER .)
    LPAREN          reduce using rule 33 (factor -> NUMBER .)


state 11

    (34) factor -> BOOLEAN .

    SEMICOLON       reduce using rule 34 (factor -> BOOLEAN .)
    EXPONENT        reduce using rule 34 (factor -> BOOLEAN .)
    INTDIV          reduce using rule 34 (factor -> BOOLEAN .)
    MOD             reduce using rule 34 (factor -> BOOLEAN .)
    PLUS            reduce using rule 34 (factor -> BOOLEAN .)
    MINUS           reduce using rule 34 (factor -> BOOLEAN .)
    IN              reduce using rule 34 (factor -> BOOLEAN .)
    CONCAT          reduce using rule 34 (factor -> BOOLEAN .)
    ANDALSO         reduce using rule 34 (factor -> BOOLEAN .)
    ORELSE          reduce using rule 34 (factor -> BOOLEAN .)
    LT              reduce using rule 34 (factor -> BOOLEAN .)
    LE              reduce using rule 34 (factor -> BOOLEAN .)
    EQUAL           reduce using rule 34 (factor -> BOOLEAN .)
    NOTEQUAL        reduce using rule 34 (factor -> BOOLEAN .)
    GE              reduce using rule 34 (factor -> BOOLEAN .)
    GT              reduce using rule 34 (factor -> BOOLEAN .)
    LBRACKET        reduce using rule 34 (factor -> BOOLEAN .)
    TIMES           reduce using rule 34 (factor -> BOOLEAN .)
    DIVIDE          reduce using rule 34 (factor -> BOOLEAN .)
    COMMA           reduce using rule 34 (factor -> BOOLEAN .)
    RBRACKET        reduce using rule 34 (factor -> BOOLEAN .)
    RPAREN          reduce using rule 34 (factor -> BOOLEAN .)
    LPAREN          reduce using rule 34 (factor -> BOOLEAN .)


state 12

    (1) statement -> expression SEMICOLON .

    $end            reduce using rule 1 (statement -> expression SEMICOLON .)


state 13
